--- a/src/style.scss
+++ b/src/style.scss
@@ -144,7 +144,7 @@ a,
 // Shot UI kit
 
 .s-input {
-  @apply text-skin-heading border border-skin-border focus-within:border-skin-link block rounded-[24px] py-2 px-3 w-full bg-transparent mb-3;
+  @apply text-skin-heading border border-skin-border focus-within:border-skin-link block rounded-[24px] py-3 px-4 w-full bg-transparent mb-3;
 }
 
 .s-label {
@@ -157,11 +157,11 @@ a,
   }
 
   .s-label {
-    @apply absolute left-2 top-[4px] px-2 text-[17px];
+    @apply px-2 text-[17px];
   }
 
   .s-input {
-    @apply border-0 bg-skin-border rounded-lg pt-[26px] mb-[14px];
+    @apply border-0 bg-skin-border rounded-lg;
   }
 
   select {
